# ROSpiderV02

./: .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh
docs/: 00_getting_started.md
scripts/: enter_ros.sh  verify_venv.sh
src/hexapod_bringup/: CMakeLists.txt  package.xml
src/hexapod_bringup/config/: ekf.yaml
src/hexapod_bringup/launch/: all_local_debug.launch  hexapod_full.launch  hexapod_simple.launch  rviz.launch  visualize_rtabmap.launch
src/hexapod_bringup/launch/components/: depth_laserscan.launch  imu_phidgets.launch  joy_teleop.launch  locomotion.launch  robot_localization_ekf.launch  rtabmap.launch  sounds.launch
src/hexapod_control/: CMakeLists.txt  package.xml  setup.py
src/hexapod_control/config/: controllers.yaml
src/hexapod_controller/: CMakeLists.txt  algoritma_karsilastirma.csv  astar_planner.py  dijkstra_planner.py  dlite_planner.py  odom_brute_force.py  package.xml  rrtstar_planner.py  walker.py
src/hexapod_controller/include/: control.h  gait.h  ik.h  servo_driver.h
src/hexapod_controller/scripts/: start_golem.sh
src/hexapod_controller/src/: control.cpp  gait.cpp  hexapod_controller.cpp  ik.cpp  servo_driver.cpp
src/hexapod_description/: CMakeLists.txt  package.xml
src/hexapod_description/launch/: view_model.launch.py
src/hexapod_description/params/: dynamixel.yaml  hexapod.yaml  joystick.yaml  joystick_ds3.yaml  joystick_ds4.yaml  phantomX.yaml  razbot.yaml
src/hexapod_description/rviz/: hexapod.rviz
src/hexapod_description/rviz_prefs/: robotViz.rviz  urdf.rviz
src/hexapod_description/urdf/: common_properties.xacro  gazebo_styles.xacro  hexapod.urdf.xacro  hexapod_model.xacro  inertial_macros.xacro  leg.xacro  phantomX_model.xacro  razbot_model.xacro
src/hexapod_gazebo/: CMakeLists.txt  package.xml
src/hexapod_gazebo/config/: phantomx_control.yaml
src/hexapod_gazebo/launch/: hexapod_control.launch.py  hexapod_gazebo.launch.py  hexapod_world.launch.py  phantomx_control.launch  phantomx_gazebo.launch
src/hexapod_gazebo/worlds/: maze.world
src/hexapod_msgs/: CMakeLists.txt  package.xml
src/hexapod_navigation/: CMakeLists.txt  package.xml
src/hexapod_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml
src/hexapod_navigation/launch/: move_base.launch
src/hexapod_navigation/maps/: map.yaml
src/hexapod_teleop_joystick/: CMakeLists.txt  package.xml
src/hexapod_teleop_joystick/include/: hexapod_teleop_joystick.h
src/hexapod_teleop_joystick/launch/: hexapod_teleop_joystick.launch.py
src/hexapod_teleop_joystick/src/: hexapod_teleop_joystick.cpp
src/test/: verify_venv.sh
