<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_bringup</name>
  <version>0.2.0</version>
  <description>hexapod_bringup package for hexapod research platform</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>hexapod_teleop_joystick</exec_depend>
  <exec_depend>hexapod_sound</exec_depend>
  <exec_depend>hexapod_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>