<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_controller</name>
  <version>0.2.0</version>
  <description>Controller node for a hexapod research platform updated for ROS 2 Jazzy</description>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend> <depend>hexapod_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>